--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "corespring-extended-text-entry",
-  "version": "1.3.0-prerelease",
+  "version": "1.0.0-prerelease",
   "main": "src/index.js",
   "description": "A pie extended text entry component",
   "keywords": [
@@ -13,46 +13,43 @@
   "scripts": {
     "client-test": "./node_modules/.bin/mocha  --require test/setup test/**/*-test.js",
     "controller-test": "./node_modules/.bin/mocha  --require test/setup controller/test/**/*-test.js",
-    "test": "npm run client-test && npm run controller-test"
+    "test": "echo no-tests-yet"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
     "babel": "^6.5.2",
-    "babel-cli": "^6.11.4",
-    "babel-core": "^6.18.0",
-    "babel-loader": "^6.2.5",
+    "babel-cli": "^6.22.2",
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
     "babel-plugin-syntax-decorators": "^6.13.0",
     "babel-preset-airbnb": "^2.1.1",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
     "chai": "^3.5.0",
     "chai-shallow-deep-equal": "^1.4.4",
-    "css-loader": "^0.25.0",
-    "enzyme": "^2.5.1",
+    "css-loader": "^0.26.1",
+    "enzyme": "^2.7.1",
     "gulp": "^3.9.1",
-    "jquery": "^3.1.0",
+    "jquery": "^3.1.1",
     "json-loader": "^0.5.4",
-    "less": "^2.7.1",
+    "less": "^2.7.2",
     "less-loader": "^2.2.3",
-    "mocha": "^3.1.2",
+    "mocha": "^3.2.0",
     "proxyquire": "^1.7.10",
-    "react-addons-test-utils": "^15.4.0",
+    "react-addons-test-utils": "^15.4.2",
     "react-dnd-test-backend": "^1.0.2",
     "release-helper": "github:pielabs/release-helper#v1.3.0",
-    "sinon": "^1.17.6",
+    "sinon": "^1.17.7",
     "style-loader": "^0.13.1",
     "webpack": "^2.1.0-beta.25",
     "webpack-dev-server": "^2.1.0-beta.9"
   },
   "dependencies": {
     "draft-js": "^0.9.1",
-    "less": "^2.7.1",
-    "lodash": "^4.15.0",
-    "material-ui": "^0.15.4",
-    "react": "~15.4.0",
-    "react-addons-css-transition-group": "^15.4.0",
-    "react-dom": "^15.3.2",
-    "react-jss": "^4.1.2",
-    "react-tap-event-plugin": "^2.0.1"
+    "less": "^2.7.2",
+    "lodash": "^4.17.4",
+    "material-ui": "^0.16.7",
+    "react": "~15.4.2",
+    "react-dom": "^15.4.2"
   }
 }
